# ollama-rag

./: .gitignore  Modelfile-template  README.md  app.py  cleanRun.sh  converse.py  ingest-pdf-list-from-txt.py  ingest-pdf.py  pr_body.md  pyproject.toml  requirements.txt  reset.sh  run.py  run.sh  scrape-pdf-list.sh  setup.py
src/: app.py  config.py  converse.py  ingest-pdf.py  main.py
